# tictactoe

./: .gitignore  CMakeLists.txt  Main.cpp  README.md  test  test.cpp
src/: CMakeLists.txt  Main.cpp  global_message.cpp  global_message.hpp  match.cpp  match.hpp
src/build-client-Desktop_Qt_6_6_1_MinGW_64_bit-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt.prev  build.ninja  cmake_install.cmake
src/build-client-Desktop_Qt_6_6_1_MinGW_64_bit-Debug/.qt/: QtDeploySupport.cmake
src/build-client-Desktop_Qt_6_6_1_MinGW_64_bit-Debug/.qtc_clangd/: compile_commands.json
src/build-client-Desktop_Qt_6_6_1_MinGW_64_bit-Debug/client_autogen/: deps  mocs_compilation.cpp
src/build-client-Desktop_Qt_6_6_1_MinGW_64_bit-Debug/client_autogen/EWIEGA46WW/: moc_TcpClient.cpp  moc_TcpClient.cpp.d  moc_forgot_password.cpp.d  moc_game_screen.cpp  moc_login_form.cpp  (+8 more)
src/client/: CMakeLists.txt  TcpClient.cpp  TcpClient.h  client.cpp  game_screen.cpp  game_screen.h  game_screen.ui  login_form.cpp  login_form.h  main.cpp  mainwindow.cpp  mainwindow.h  menu_login.cpp  menu_login.h  menu_login.ui  register_form.cpp  register_form.h
src/client/GUI/: CMakeLists.txt  game_screen.cpp  game_screen.h  login_form.cpp  login_form.h  login_form.ui  main.cpp  mainwindow.cpp  menu_login.cpp  menu_login.h  register_form.cpp  register_form.ui
src/client/build-GUI-Desktop_Qt_6_6_1_MinGW_64_bit-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake
src/server/: auth.cpp  auth.hpp  main.cpp  message.cpp  server.cpp  server.hpp  server_main.cpp  user.cpp  user.hpp  user.txt
(+228 files in other folders)
